Bug 398781 - Reword the warning "Baloo configuration does not allow to discover your music"
Summary: Reword the warning "Baloo configuration does not allow to discover your music"
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: baloo (other bugs)
Version First Reported In: 0.2.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-18 07:12 UTC by Michael D
Modified: 2018-10-07 13:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2018-09-18 07:12:47 UTC
1. I have baloo enabled with "also index file content" disabled, and whenever I start elisa I get the message "Baloo configuration does not allow to discover your music". When I click "Modify it", it enables content searching, which is not needed.

2. If baloo is disabled but I don't want to use it, it would be nice if there were an option to never see the warning message again.

3. The message is ungrammatical and people might not know what "Baloo" is, so I propose the message be changed to "File search settings do not allow the discovery of music" or "Cannot discover music with the current file search settings" or something similar.
Comment 1 Matthieu Gallien 2018-09-18 07:29:43 UTC
I get your point about the way the notification is written.
The notification already offers the possibility to deactivate usage of Baloo by Elisa.
Comment 2 Michael D 2018-09-18 07:32:33 UTC
If baloo is completely disabled, does elisa still ask if you want to disable it then?
Comment 3 Matthieu Gallien 2018-09-18 07:50:10 UTC
It should be doing.

The idea is that the end user experience is much better with Baloo. So, the user getsa chance to activate it.

The plain old raw file system scanning will work but is not performant and requires a lot from the application point of view (may need to modify kernel configuration variables, ...).
Comment 4 Michael D 2018-09-18 08:36:22 UTC
Just to be clear, the problem is that when file search is enabled, elisa still gives the user a warning. And if the user clicks "modify it", their search configuration may be changed in a way they don't want, and which isn't needed for elisa to work with baloo. If I have baloo enabled (without content searching), I shouldn't get the warning.
Comment 5 Matthieu Gallien 2018-09-18 08:47:44 UTC
No, Elisa needs the metadata to be indexed. This is the way the Baloo support is done.
Comment 6 Michael D 2018-09-18 09:21:33 UTC
I see now. I was confused about the way baloo works. I thought content searching was only relevant for document type formats, such as pdf, doc, etc, and not for music files. I also thought elisa was using baloo since it shows a song's rating that was set using baloo. Apologies, and please ignore part (1) of the report.
Comment 7 Matthieu Gallien 2018-10-07 13:46:41 UTC
Git commit e6813990cb48d2accc72dfd6409e2646eee14f61 by Matthieu Gallien.
Committed on 07/10/2018 at 13:45.
Pushed by mgallien into branch 'master'.

reword the notification message for unusable Baloo configuration

M  +1    -1    src/baloo/localbaloofilelisting.cpp

https://commits.kde.org/elisa/e6813990cb48d2accc72dfd6409e2646eee14f61