reword the notification message for unusable Baloo configuration

BUG: 398781